fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@ li a {
 /*contact section*/
 #contact-me {
   display: flex;
-  margin: 30px;
+  margin: 50px;
   font-size: 20px;
   align-items: center;
 }
@@ -222,6 +222,7 @@ width: 65px;
   display:flex;
   justify-content: space-around;
   gap:10vw;
+  margin: 80px;
 }
 
 footer {
